--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+zscan
 
 # Test binary, built with `go test -c`
 *.test
@@ -15,11 +13,15 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
-# Go workspace file
-go.work
-go.work.sum
+# IDE specific files
+.idea/
+.vscode/
 
-# env file
-.env
+# Config files
+config/*.yaml
+!config/config.yaml.example
+
+# Log files
+*.log
